[gd_scene load_steps=6 format=2]

[ext_resource path="res://PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://artAssets/PauseMenu/Untitled.png" type="Texture" id=2]
[ext_resource path="res://artAssets/PauseMenu/Untitled_hovered.png" type="Texture" id=3]
[ext_resource path="res://artAssets/PauseMenu/Quit.png" type="Texture" id=4]
[ext_resource path="res://artAssets/PauseMenu/Quit_hovered.png" type="Texture" id=5]

[node name="PauseScreen" type="Control"]
pause_mode = 2
margin_left = 200.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 100.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
color = Color( 0.309804, 0.313726, 0.345098, 0.627451 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1600.0
margin_bottom = 900.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1600.0
margin_bottom = 900.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 458.0
margin_top = 189.0
margin_right = 1141.0
margin_bottom = 711.0
custom_constants/separation = 120

[node name="TextureButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 683.0
margin_bottom = 201.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 321.0
margin_right = 683.0
margin_bottom = 522.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
